Re-factor the loading of assets from the original game. Add names for some assets. Polish.